[gd_scene load_steps=22 format=3 uid="uid://c5phb5ggyd2kt"]

[ext_resource type="Script" uid="uid://bd8gnp1bedk86" path="res://code/scenes/game.gd" id="1_e67e6"]
[ext_resource type="PackedScene" uid="uid://d360xf3bomed7" path="res://code/Environment/Room.tscn" id="2_i48lw"]
[ext_resource type="PackedScene" uid="uid://bq03o58a1pc3" path="res://code/Characters/Player.tscn" id="3_pmdtt"]
[ext_resource type="PackedScene" uid="uid://ighwgeo0gn3p" path="res://code/Environment/Camera.tscn" id="4_pf1ok"]
[ext_resource type="Texture2D" uid="uid://c7iwuxg62amu4" path="res://assets/sprites/misc/rug.png" id="6_n1h8g"]
[ext_resource type="Texture2D" uid="uid://dcob3cc0mqa7o" path="res://assets/image/flash_cone.png" id="6_s55pg"]
[ext_resource type="PackedScene" uid="uid://dmxx1jkmbvkn4" path="res://code/Environment/MiscItems/FoodPot.tscn" id="7_2liwv"]
[ext_resource type="PackedScene" uid="uid://cb3lka58w74iw" path="res://code/Environment/MiscItems/FlowerPot.tscn" id="8_8lhlm"]
[ext_resource type="PackedScene" uid="uid://4n72o7pas5q5" path="res://code/Environment/MiscItems/Lamp.tscn" id="9_7m0e1"]
[ext_resource type="PackedScene" uid="uid://b0kkn7vkd5c70" path="res://code/Environment/MiscItems/Cactus.tscn" id="9_s5xrg"]
[ext_resource type="PackedScene" uid="uid://c6qegowrybkuu" path="res://code/Environment/wall.tscn" id="10_idifn"]
[ext_resource type="PackedScene" uid="uid://cp2dkalxv8pd0" path="res://code/Environment/MiscItems/ChairBack.tscn" id="10_n1h8g"]
[ext_resource type="PackedScene" uid="uid://cdywofglmqocj" path="res://code/Environment/MiscItems/ChairFront.tscn" id="11_5bw47"]
[ext_resource type="AudioStream" uid="uid://ctvvpqb6s0gcb" path="res://assets/sound/flash.ogg" id="11_xw5jq"]
[ext_resource type="PackedScene" uid="uid://bls4d2xcc5ura" path="res://code/Environment/MiscItems/ChairRight.tscn" id="12_ilvw1"]
[ext_resource type="AudioStream" uid="uid://b51u04fsbr0er" path="res://assets/sound/appareil.ogg" id="12_kqrdu"]
[ext_resource type="PackedScene" uid="uid://bfkt54bpb4vwc" path="res://code/Characters/Cat.tscn" id="13_50xxw"]
[ext_resource type="PackedScene" uid="uid://d2dhbicojiknb" path="res://code/Environment/MiscItems/ChairLeft.tscn" id="13_fvnqo"]
[ext_resource type="Texture2D" uid="uid://cbsvyumf6c2jq" path="res://assets/image/Cartouche.png" id="14_cb2cc"]
[ext_resource type="PackedScene" uid="uid://bfl42md7nu0an" path="res://code/Environment/MiscItems/FlowerPot2.tscn" id="15_5bw47"]
[ext_resource type="Texture2D" uid="uid://dgvoo2lvqs4h3" path="res://assets/image/transparent_photo_taken.png" id="15_t5exb"]

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_e67e6")

[node name="Room" parent="." instance=ExtResource("2_i48lw")]
scale = Vector2(1.082, 0.901)

[node name="RugNode" type="Node2D" parent="."]

[node name="Rug" type="Sprite2D" parent="RugNode"]
position = Vector2(692, 297)
scale = Vector2(1.80069, 1.6875)
texture = ExtResource("6_n1h8g")

[node name="Player" parent="." instance=ExtResource("3_pmdtt")]
position = Vector2(384, 223)

[node name="Camera" parent="." instance=ExtResource("4_pf1ok")]
position = Vector2(666, 540)

[node name="flash_cone" type="Sprite2D" parent="."]
visible = false
position = Vector2(888, 369)
scale = Vector2(2.3, 2.3)
texture = ExtResource("6_s55pg")

[node name="MiscItems" type="Node2D" parent="."]
y_sort_enabled = true

[node name="FoodPot" parent="MiscItems" instance=ExtResource("7_2liwv")]
position = Vector2(77, 296)

[node name="FoodPot2" parent="MiscItems" instance=ExtResource("7_2liwv")]
position = Vector2(1165, 414)

[node name="Lamp2" parent="MiscItems" instance=ExtResource("9_7m0e1")]
z_index = 1
position = Vector2(950, 66)

[node name="Lamp3" parent="MiscItems" instance=ExtResource("9_7m0e1")]
z_index = 1
position = Vector2(1257, 458)

[node name="FlowerPot2" parent="MiscItems" instance=ExtResource("8_8lhlm")]
position = Vector2(34, 356)

[node name="Cactus" parent="MiscItems" instance=ExtResource("9_s5xrg")]
position = Vector2(343, 150)
scale = Vector2(1, 1.5)

[node name="ChairBack" parent="MiscItems" instance=ExtResource("10_n1h8g")]
position = Vector2(137, 222)
scale = Vector2(1.5, 1.5)

[node name="ChairFront" parent="MiscItems" instance=ExtResource("11_5bw47")]
position = Vector2(1192, 115)
scale = Vector2(1.5, 1.5)

[node name="ChairRight" parent="MiscItems" instance=ExtResource("12_ilvw1")]
position = Vector2(231, 212)
scale = Vector2(1.5, 1.5)

[node name="ChairRight2" parent="MiscItems" instance=ExtResource("12_ilvw1")]
position = Vector2(1238, 272)
scale = Vector2(1.5, 1.5)

[node name="ChairLeft" parent="MiscItems" instance=ExtResource("13_fvnqo")]
position = Vector2(41, 492)
scale = Vector2(1.5, 1.5)

[node name="FlowerPot3" parent="MiscItems" instance=ExtResource("15_5bw47")]
position = Vector2(1252, 120)

[node name="Walls" type="Node" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("10_idifn")]
position = Vector2(554, 1404)

[node name="Wall2" parent="Walls" instance=ExtResource("10_idifn")]
position = Vector2(2099, 393)
rotation = -1.5708

[node name="Wall3" parent="Walls" instance=ExtResource("10_idifn")]
position = Vector2(-818, 308)
rotation = 1.5708

[node name="Wall4" parent="Walls" instance=ExtResource("10_idifn")]
visible = false
position = Vector2(587, -682)
rotation = 3.14159

[node name="Wall5" parent="Walls" instance=ExtResource("10_idifn")]
position = Vector2(-389, -597)
rotation = 0.872665

[node name="Sound" type="Node" parent="."]

[node name="FlashSound" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("11_xw5jq")
volume_db = 20.0

[node name="CameraSound" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("12_kqrdu")
volume_db = 20.0

[node name="Cats" type="Node" parent="."]

[node name="Cat" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat2" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat3" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat4" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat5" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat6" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat7" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat8" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat9" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cat10" parent="Cats" instance=ExtResource("13_50xxw")]
position = Vector2(418, 360)

[node name="Cartouche2" type="Node" parent="."]

[node name="Cartouche" type="Sprite2D" parent="Cartouche2"]
position = Vector2(640, 652)
scale = Vector2(1, 1.112)
texture = ExtResource("14_cb2cc")

[node name="0" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(1225, 648)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="1" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(1152, 648)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="2" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(1079, 648)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="3" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(1006, 648)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="4" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(932, 648)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="5" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(860, 648)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="6" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(787.73, 648.31)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="7" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(714.73, 648.31)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="8" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(640.73, 648.31)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[node name="9" type="Sprite2D" parent="Cartouche2"]
visible = false
position = Vector2(567, 647)
scale = Vector2(1.14, 1.14)
texture = ExtResource("15_t5exb")

[connection signal="last_photo_taken" from="Camera" to="." method="_on_camera_last_photo_taken"]
[connection signal="photo_ready" from="Camera" to="." method="_on_camera_photo_ready"]
[connection signal="photo_taken" from="Camera" to="." method="_on_camera_photo_taken"]
